refactor: enhance user profile management